<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainMenuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:text="@string/title"
        android:textColor="@color/yellowgold"
        android:textSize="44dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/enjoy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/enjoy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="68dp"
        android:background="@drawable/my_button_bg"
        android:drawableLeft="@drawable/ic_fun"
        android:fontFamily="casual"
        android:onClick="showFlags"
        android:padding="8dp"
        android:text="@string/textEnjoy"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/breweries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/my_button_bg"
        android:drawableLeft="@drawable/ic_breweries"
        android:fontFamily="casual"
        android:onClick="showBreweries"
        android:padding="8dp"
        android:text="@string/breweries"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/aboutIt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enjoy"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/aboutIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/my_button_bg"
        android:drawableLeft="@drawable/ic_information"
        android:fontFamily="casual"
        android:onClick="aboutIt"
        android:padding="8dp"
        android:text="@string/textAboutIt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breweries" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/my_button_bg"
        android:drawableLeft="@drawable/ic_exit"
        android:fontFamily="casual"
        android:onClick="exitApp"
        android:padding="8dp"
        android:text="@string/textExit"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>