<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_about_it"
    tools:context=".activities.AboutItActivity">

    <TextView
        android:id="@+id/descAboutIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:background="@color/lemon_chiffon_less"
        android:justificationMode="inter_word"
        android:padding="6dp"
        android:text="@string/desc_about_app"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/returnMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/returnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/my_button_bg"
        android:drawableLeft="@drawable/ic_return"
        android:fontFamily="casual"
        android:onClick="returnMenu"
        android:padding="8dp"
        android:text="@string/text_main_menu"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/headingAboutIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="@string/textAboutIt"
        android:textColor="@color/yellowgold"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/descAboutIt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014" />
</android.support.constraint.ConstraintLayout>